---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "type i : int\ntype s : string\nvar o : i\nvar w : s\nget : o, w : o ..\nget w : * ..\n"
---
"i"@"src/main.t:5..6" [Type]: alias[DefId(PackageId(3072), LocalDefId(0))] of int
"s"@"src/main.t:18..19" [Type]: alias[DefId(PackageId(3072), LocalDefId(1))] of string
"o"@"src/main.t:33..34" [ConstVar(Var, No)]: alias[DefId(PackageId(3072), LocalDefId(0))] of int
"w"@"src/main.t:43..44" [ConstVar(Var, No)]: alias[DefId(PackageId(3072), LocalDefId(1))] of string
"<root>"@"<unknown>:0..0" [Module(No)]: <error>
